# artemis-py

./: .envrc  .envrc.example  Dockerfile  README.md  pyproject.toml
conf/: dev.yml  local.yml  prod.yml  qa.yml  staging.yml
deployment/: liquidation_searcher_dev.service
docs/: 01_framework_architecture.md
examples/: README.md  simple_example.py
examples/orderly_liquidation_searcher/: README.md  main.py
research/: .envrc.example  async_queue.py  broadcast_queue.py  exchanges.py  precision.py  woo.py
research/exchanges/: binance.py  orderly.py
src/artemis/: __init__.py  types.py
src/artemis/engine/: core.py
src/artemis/utils/: __init__.py  event_loop.py  log.py
src/liquidation_searcher/: main.py  router.py  types.py
src/liquidation_searcher/collectors/: orderly_liquidation.py  orderly_liquidation_rest.py  orderly_liquidation_ws.py
src/liquidation_searcher/engine/: core.py
src/liquidation_searcher/exchanges/: woo.py
src/liquidation_searcher/executors/: orderly_executor.py
src/liquidation_searcher/strategies/: direct.py  orderly_hedge.py  perp_arbitrage.py
src/liquidation_searcher/utils/: log.py
