[tool.poetry]
name = "liquidation-searcher"
version = "0.1.0"
description = ""
authors = ["Akagi201 <akagi201@gmail.com>"]
readme = "README.md"
packages = [{include = "liquidation_searcher", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
pyyaml = "^6.0.1"
ccxt = "^4.1.70"
orderly-sdk = "0.1.5"
wootrade-sdk = "^0.1.1"
types-pyyaml = "^6.0.12.12"
aiohttp = "^3.9.1"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
